style.css
body {
  font-family: "Fredoka One", cursive;
  background-color: #000000;
  color: #ffffff;
  display: grid;
  text-align: center;
  margin: 0;
  grid-template-rows: 325px auto auto;
}

.github-corner {
  z-index: 1;
}

.github-corner a:link,
.github-corner a:visited,
.github-corner a:focus,
.github-corner a:hover,
.github-corner a:active {
  color: none;
}

header {
  grid-row: 1;
  position: relative;
  height: 300px;
  overflow: hidden;
}

.header__bg {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(#00b1fc, #1a8cff);
  transform: skewY(4deg);
  transform-origin: top right;
}

h1 {
  margin: 0;
  padding: 70px 0px 0px 0px;
  text-align: center;
}

header h1 {
  position: relative;
  font-size: 60px;
}

header p {
  margin: 0;
  position: relative;
  font-size: 22px;
  padding: 0px 0px 0px 0px;
}

@media screen and (max-width: 500px) {
  header {
    height: 250px;
  }

  h1 {
    padding: 80px 0px 0px 0px;
  }

  header h1 {
    font-size: 50px;
  }
}

@media screen and (max-width: 350px) {
  header h1 {
    font-size: 40px;
  }

  header p {
    font-size: 20px;
  }
}

@media screen and (max-width: 265px) {
  header h1 {
    font-size: 30px;
  }
}

main {
  grid-row: 2;
  padding-bottom: 10vh;
}

#pass {
  font-size: 25px;
  font-family: "Share Tech Mono", monospace;
}

button {
  background-color: #1a8cff;
  color: white;
  outline: none;
  border-radius: 50px 50px 50px 50px;
  text-align: center;
  display: inline-block;
  font-size: 12px;
  margin: 4px 2px;
  cursor: pointer;
}

@media (hover: hover) {
  button:hover {
    background-color: #50b347;
    outline: 0;
  }
}

button:active {
  background-color: #50b347;
  outline: 0;
}

#gen-btn {
  padding: 0px 6em 0px 3em;
  border: none;
}

#options {
  width: 5em;
  margin-left: -5em;
  border: 4px solid black;
}

#menu {
  display: none;
}

footer {
  grid-row: 3;
}

a:link,
a:visited {
  color: #1a8cff;
  background-color: transparent;
  text-decoration: none;
}

a:focus,
a:hover,
a:active {
  color: #50b347;
  background-color: transparent;
  text-decoration: none;
}

/*
@media(prefers-color-scheme: dark) {

  body,
  button {
    background: #222222;
    color: #1a8cff;
  }

  a:link,
  a:visited {
    color: #fafafa;
  }

  a:hover,
  a:active {
    color: lightseagreen;
  }
}
*/

#menu {
  margin-top: 5px;
  max-width: 100%;
}

.slider {
  -webkit-appearance: none;
  width: 26em;
  height: 3em;
  border-radius: 32px;
  background: #1a8cff;
  outline: none;
}

.slider::-moz-range-track {
  height: 50px;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: #50b347;
  cursor: pointer;
  border: 4px solid black;
}

.slider::-moz-range-thumb {
  width: 42px;
  height: 42px;
  border-radius: 50%;
  background: #50b347;
  cursor: pointer;
  border: 4px solid black;
}

